Fix bug with css styling in games component that added too much space between child elements

--- a/ngLoreHunter/src/app/shared/components/games/games.component.css
+++ b/ngLoreHunter/src/app/shared/components/games/games.component.css
@@ -88,7 +88,7 @@
   padding: 10px;
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
+  /* justify-content: space-around; */
   background: var(--container-bkg-color);
   color: var(--text-color);
 }
